--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
 <body>
 
-<p>first paragraph</p>
-
-<p>this is another paragraph</p>
+  <h1>This is a Heading</h1>
+  <p>first paragraph</p>
+  <p>this is another paragraph</p>
+  <p>This is a paragraph.</p>
 
 </body>
 
